--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       padding: 15px 15px 15px 15px;
       background-color: var(--white);
       border-radius: 20px;
-      box-shadow: 1px 1px 10px 0px grey;
+      box-shadow: 1px 1px 25px 0px rgba(128, 128, 128,0.3);
 
 
     }
